--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^17.0.42",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
+    "babel-plugin-macros": "^3.1.0",
     "dotenv": "^16.0.1",
     "firebase": "^9.8.2",
     "react": "^17.0.2",
@@ -56,6 +57,7 @@
     ]
   },
   "dependencies": {
-    "@types/redux-logger": "^3.0.9"
+    "@types/redux-logger": "^3.0.9",
+    "typed-redux-saga": "^1.5.0"
   }
 }
