--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   },
   "dependencies": {
     "@types/redux-logger": "^3.0.9",
+    "@types/styled-components": "^5.1.25",
     "typed-redux-saga": "^1.5.0"
   }
 }
